// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FitnessDrillIllustration /> links to any step and finishes at the end 1`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 80,
      "gestureIsClickThreshold": 10,
      "velocityThreshold": 0.3,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 250,
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 250,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#A6A6A6"
          hidesWhenStopped={true}
          size="large"
        />
        <Text>
          Loading...
        </Text>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 250,
            "overflow": "hidden",
            "width": 750,
          }
        }
      >
        <ViewManagerAdapter_ExpoVideoView
          proxiedProperties={
            Object {
              "onError": [Function],
              "onFullscreenUpdate": [Function],
              "onLoad": [Function],
              "onLoadStart": [Function],
              "onReadyForDisplay": [Function],
              "onStatusUpdate": [Function],
              "resizeMode": "mock",
              "source": undefined,
              "status": Object {},
              "useNativeControls": true,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "id": 1,
          "illustrationSource": "406746924",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "First Step",
        },
        Object {
          "id": 2,
          "illustrationSource": "406747302",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "Second Step",
        },
        Object {
          "id": 3,
          "illustrationSource": "406747476",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "Third Step",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {
                    "color": "#A6A6A6",
                  },
                  Object {},
                ]
              }
            >
              3
               
              First Step
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {
                    "color": "#A6A6A6",
                  },
                  Object {},
                ]
              }
            >
              3
               
              Second Step
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {},
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              3
               
              Third Step
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
            testID="doneIcon"
          >
            <View
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text />
            </View>
            <View
              style={
                Object {
                  "opacity": 0,
                }
              }
            >
              <Text />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`<FitnessDrillIllustration /> links to any step and finishes at the end 2`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 80,
      "gestureIsClickThreshold": 10,
      "velocityThreshold": 0.3,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
        "padding": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 16,
          "fontWeight": "bold",
          "marginVertical": 50,
        }
      }
    >
      You have completed the drill!
    </Text>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 40,
          "height": 80,
          "opacity": 1,
          "width": 80,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<FitnessDrillIllustration /> renders correctly 1`] = `
<View
  config={
    Object {
      "directionalOffsetThreshold": 80,
      "gestureIsClickThreshold": 10,
      "velocityThreshold": 0.3,
    }
  }
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 250,
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 250,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#A6A6A6"
          hidesWhenStopped={true}
          size="large"
        />
        <Text>
          Loading...
        </Text>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 250,
            "overflow": "hidden",
            "width": 750,
          }
        }
      >
        <ViewManagerAdapter_ExpoVideoView
          proxiedProperties={
            Object {
              "onError": [Function],
              "onFullscreenUpdate": [Function],
              "onLoad": [Function],
              "onLoadStart": [Function],
              "onReadyForDisplay": [Function],
              "onStatusUpdate": [Function],
              "resizeMode": "mock",
              "source": undefined,
              "status": Object {},
              "useNativeControls": true,
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "id": 1,
          "illustrationSource": "406746924",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "First Step",
        },
        Object {
          "id": 2,
          "illustrationSource": "406747302",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "Second Step",
        },
        Object {
          "id": 3,
          "illustrationSource": "406747476",
          "illustrationType": "vimeo",
          "repetition": 3,
          "title": "Third Step",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {},
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              3
               
              First Step
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "flex": 1,
                "opacity": 1,
              }
            }
            testID="doneIcon"
          >
            <View
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <Text />
            </View>
            <View
              style={
                Object {
                  "opacity": 0,
                }
              }
            >
              <Text />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {},
                  Object {},
                ]
              }
            >
              3
               
              Second Step
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "opacity": 1,
              "padding": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexGrow": 0,
                "flexShrink": 0,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#232b2b",
                    "fontSize": 20,
                  },
                  Object {},
                  Object {},
                ]
              }
            >
              3
               
              Third Step
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
